adds 404.png - still need to do better error pages...

--- a/static/404.html
+++ b/static/404.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-	<h1><i>404 - Not Found :-(</i></h1>
+	<img src='http://www.designfinder.net/uploads/gallery/gallery_0_168.png' style="margin:auto;"/>
 </body>
 </html>
